--- a/platformio.ini
+++ b/platformio.ini
@@ -8,7 +8,11 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:uno]
+[env]
 platform = atmelavr
 board = megaatmega2560
 framework = arduino
+src_filter = +<*.h> +<program-${PIOENV}.cpp>
+
+[env:configuremotor]
+[env:main]
