--- a/platformio.ini
+++ b/platformio.ini
@@ -12,7 +12,8 @@
 platform = atmelavr
 board = megaatmega2560
 framework = arduino
-src_filter = +<*.h> +<program-${PIOENV}.cpp>
+src_filter = +<*.h> +<${PIOENV}.cpp>
 
 [env:configuremotor]
+[env:i2cscanner]
 [env:main]
