--- a/platformio.ini
+++ b/platformio.ini
@@ -17,3 +17,11 @@ src_filter = +<*.h> +<${PIOENV}.cpp>
 [env:configuremotor]
 [env:i2cscanner]
 [env:main]
+
+[env:esp]
+platform = platformio/espressif32
+board = denky32
+board_build.mcu = esp32
+monitor_speed = 115200
+src_filter = +<*.h> +<main.cpp>
+ 
