start implementing odo

--- a/platformio.ini
+++ b/platformio.ini
@@ -13,6 +13,7 @@ platform = atmelavr
 board = megaatmega2560
 framework = arduino
 src_filter = +<*.h> +<${PIOENV}.cpp>
+monitor_speed = 115200
 
 [env:configuremotor]
 [env:i2cscanner]
