--- a/platformio.ini
+++ b/platformio.ini
@@ -21,7 +21,7 @@ monitor_speed = 115200
 
 [env:esp]
 platform = platformio/espressif32
-board = denky32
+board = esp32dev
 board_build.mcu = esp32
 monitor_speed = 115200
 src_filter = +<*.h> +<main.cpp>
