do a lot of things

--- a/platformio.ini
+++ b/platformio.ini
@@ -8,21 +8,21 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
+# [env]
+# platform = atmelavr
+# board = megaatmega2560
+# src_filter = +<*.h> +<${PIOENV}.cpp>
+# monitor_speed = 115200
+
+
 [env]
-platform = atmelavr
-board = megaatmega2560
-framework = arduino
-src_filter = +<*.h> +<${PIOENV}.cpp>
-monitor_speed = 115200
-
-[env:configuremotor]
-[env:i2cscanner]
-[env:main]
-
-[env:esp]
 platform = platformio/espressif32
 board = esp32dev
 board_build.mcu = esp32
 monitor_speed = 115200
-src_filter = +<*.h> +<main.cpp>
- 
+src_filter = +<*.h> +<${PIOENV}.cpp>
+framework = arduino
+
+[env:configuremotor]
+[env:i2cscanner]
+[env:main]
